# vantage-cli

./: .commitlintrc.yml  .gitignore  CLOUD_PROVIDER_SDK.md  CLUSTER_DELETE_APP_SUPPORT.md  CLUSTER_SDK_COMPLETE.md  CLUSTER_SDK_IMPLEMENTATION.md  CRUD_IMPLEMENTATION_SUMMARY.md  CUDO_IMPLEMENTATION_SUMMARY.md  DASHBOARD_CREATE_DEPLOYMENT_MODAL.md  DASHBOARD_MAIN_PANEL_REFACTOR.md  DASHBOARD_REFACTORING_SUMMARY.md  DASHBOARD_SDK_REFACTORING.md  DEPLOYMENT_DISPLAY_FIX.md  DEPLOYMENT_SCHEMA_UPDATES.md  DEPLOYMENT_SDK_REFACTOR.md  JOB_ENDPOINT_VERIFICATION.md  JOB_LICENSE_SDK_SCHEMAS.md  JUPYTERHUB_INTEGRATION.md  LOCALHOST_APPS_REORGANIZATION.md  PLURAL_ALIASES.md  README.md  REFACTORING_SUMMARY.md  SCHEMA_REORGANIZATION.md  SDK_SCHEMA_INTEGRATION.md  TABLE_AUTO_SCALING_IMPROVEMENTS.md  UNIVERSAL_OUTPUT_FORMATTER_JOB_LICENSE.md  VANTAGE_REST_CLIENT_DECORATOR.md  comprehensive_header_check.py  crud_render_functions_guide.md  debug_addon_status.py  debug_annotations.py  debug_decorators.py  debug_namespace_check.py  debug_typer.py  debug_wraps.py  demo.cast  fix_all_run_commands.py  fix_cluster_tests.py  fix_config_tests.py  fix_example_tests.py  (+24 more)
.github/: copilot-instructions.md
vantage-api/: .gitignore  CHANGELOG.rst  Dockerfile  Makefile  delete_org_template.html  docker-compose.yaml  generate_tpl_input.py  invite_template.html  pyproject.toml
vantage-api/alembic/: alembic.ini  env.py
vantage-api/alembic/versions/: 20240115_193534--6df66e9e3021_first_migration.py  20240123_114136--2eb95042d582_added_deleting_status_to_cluster_status_.py  20240127_000241--99256d93e254_create_the_cloud_account_table.py  20240206_162031--dd48e27efb1d_create_relationship_between_cloud_.py  20240213_123645--5d31f6787421_integrate_storage_with_cloud_accounts.py  20240305_141412--efb840bd688d_create_database_components_for_.py  20240402_131440--6d0a7a4ce67e_patch_subscription_table_based_in_subscription_product.py  20240513_080234--9a543dd78ead_create_cloud_account_api_key_table.py  20240531_094025--ab9dab55f0cc_patch_cluster_status_enum.py  20240822_092345--dc45f99c57e0_integrate_api_with_agent.py  20240909_180213--491abd909af0_map_ec2_instance_typer_per_region.py  20240924_224746--4f5b26ab7c5f_create_parition_table.py  20241010_144650--a36bf58017f9_remove_nan_from_node_selector.py  20250113_103740--6a896d26_fix_slow_db_query.py  20250117_115540--f18198a1ab3c_create_index_in_client_id_column.py  20250502_135218--d830f95409d7_add_the_notebook_servers_table.py  20250528_143223--f44f9f81f13d_add_slurm_job_id_column_in_notebook_table.py  20250609_092455-6f0ab1159244_fix_vcpu_data.py  20250612_145732--105df9d29f64_add_cluster_queue_table.py  20250709_082416--5c3214c00c19_add_cluster_queue_actions_table.py
vantage-api/api/: constants.py  main.py  settings.py
vantage-api/api/body/: input.py  output.py
vantage-api/api/broker_app/: helpers.py  rpc_client.py
vantage-api/api/cfn_app/: acct_gather.conf  cfn_ops.py  compute-node.sh  contants.py  head-node.sh  helpers.py  jupyter_config.py  jupyter_config_singleserver.py  schemas.py  slurm.conf  slurmdbd.conf  slurmrestd.conf
vantage-api/api/cfn_app/stacks/: slurm_cluster.py  slurm_cluster_with_supplied_networking.json
vantage-api/api/ec2_app/: ec2_ops.py
vantage-api/api/efs_app/: efs_ops.py
vantage-api/api/graphql_app/: __init__.py  extensions.py  helpers.py  mutations.py  queries.py  types.py
vantage-api/api/graphql_app/resolvers/: __init__.py  cluster.py  notebooks.py  partition.py  storage.py
vantage-api/api/iam_app/: iam_ops.py
vantage-api/api/identity/: management_api.py
vantage-api/api/metering_mktplace_app/: metering_mktplace_ops.py
vantage-api/api/mktplace_entitlement_app/: mktplace_entitlement_ops.py
vantage-api/api/routers/: __init__.py  graphql_router.py
vantage-api/api/routers/clients/: clients.py  helpers.py
vantage-api/api/routers/cloud_accounts/: cloud_accounts.py  helpers.py
vantage-api/api/routers/groups/: groups.py  helpers.py
vantage-api/api/routers/organizations/: helpers.py  organizations.py
vantage-api/api/routers/roles/: helpers.py  roles.py
vantage-api/api/routers/subscriptions/: helpers.py  subscriptions.py
vantage-api/api/routers/walkthrough/: walkthrough.py
vantage-api/api/schemas/: aws.py  keycloak.py
vantage-api/api/sql_app/: __init__.py  enums.py  models.py  queries.py  schemas.py  session.py
vantage-api/api/sqs_app/: sqs_listener.py
vantage-api/api/sts_app/: sts_ops.py
vantage-api/api/utils/: email.py  exception.py  helpers.py  logging.py  response.py
vantage-api/cloud_account_stack/: app.py  cdk.json
vantage-api/cloud_account_stack/cloud_account_stack/: lambda_function.py  stack.py  vantage_integration_policy.json
vantage-api/scripts/: __init__.py  create_resources.py  cron_subscription_service.py  delete_resources.py  helpers.py  rpc_server.py
vantage-api/scripts/templates/: alembic.ini.jinja
vantage-api/tests/: conftest.py  test_main.py
vantage-api/tests/body/: test_output.py
vantage-api/tests/broker_app/: test_broker_helpers.py  test_rpc_client.py
vantage-api/tests/cfn_app/: slurm_cluster_with_self_deployed_networking.json  test_cfn_helpers.py  test_cfn_ops.py  test_cfn_schemas.py  test_constants.py
vantage-api/tests/cloud_account_stack/: test_lambda_function.py  test_stack_resources.py
vantage-api/tests/efs_app/: test_efs_check_path.py  test_efs_mount.py  test_efs_ops.py  test_efs_unmount.py
vantage-api/tests/graphql_app/: test_graphql_extensions.py  test_graphql_helpers.py
vantage-api/tests/iam_app/: test_iam_ops.py
vantage-api/tests/mktplace_app/: test_mktplace_ops.py
vantage-api/tests/routers/clients/: test_clients_helper.py  test_clients_router.py
vantage-api/tests/routers/cloud_accounts/: test_cloud_account_router.py  test_cloud_accounts_helpers.py
vantage-api/tests/scripts/: test_create_resources.py  test_cron_subscription_service.py  test_delete_resources.py  test_helpers.py
vantage-api/tests/sqs_app/: test_sqs_listener.py
vantage-api/tests/sts_app/: test_sts_ops.py
vantage-api/tests/utils/: test_email.py  test_helpers.py
(+583 files in other folders)
