[project]
name = "vantage-cli"
version = "0.1.18"
description = "The Vantage Compute CLI."
authors = [
    {name = "jamesbeedy", email = "james@vantagecompute.ai"}
]
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.11"
dependencies = [
    "juju ~= 3.6",
    "typer>=0.17.4",
    "rich>=14.1.0",
    "ruamel.yaml",
    "pydantic>=2.11",
    "snick>=2.1",
    "py-buzz>=7.3",
    "loguru>=0.7.3",
    "httpx>=0.28.1",
    "python-jose[cryptography]>=3.5.0",
    "pendulum>=3.1.0",
    "gql>=4.0.0",
    "aiohttp>=3.8.0",
    "requests-toolbelt>=0.10.0",
    "anyio>=3.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["vantage_cli"]
exclude = [
    "git-cliff-*",
    "justfile",
    "docs",
    "tests",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "git-cliff-*",
    "justfile",
    "docs",
    "tests",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
dev = [
    # Linting
    "black",
    "ruff",
    "codespell",
    "pyright",
    # Testing
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "coverage[toml] ~= 7.8",

]

[project.scripts]
vantage = "vantage_cli.main:app"


[tool.coverage.run]
branch = true
omit = [
    # Exclude new stub command modules from coverage
    "vantage_cli/commands/job/*",
    "vantage_cli/commands/support_ticket/*",
    "vantage_cli/commands/team/*",
    "vantage_cli/commands/federation/*",
    # Exclude existing stub command modules with low coverage
    "vantage_cli/commands/license/*",
    "vantage_cli/commands/storage/*",
    "vantage_cli/commands/network/*",
]

[tool.coverage.report]
show_missing = true

[tool.coverage.paths]
source = ["vantage_cli"]

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"
filterwarnings = [
    "ignore::DeprecationWarning:juju.client.connection",
    "ignore::DeprecationWarning:websockets.legacy",
]

# Spell checking tools configuration
[tool.codespell]
skip = ".venv,venv,icon.svg,.tox,.git,.mypy_cache,.ruff_cache,.pytest_cache,.vscode,.coverage,.venv,cover"
ignore-words-list = "aks"

# Formatting tools configuration
[tool.black]
line-length = 99
target-version = ["py312"]

# Linting tools configuration
[tool.ruff]
line-length = 99
lint.select = ["E", "W", "F", "C", "N", "D", "I001"]
lint.extend-ignore = [
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
]
lint.ignore = ["E501", "D107"]
lint.per-file-ignores = { "**/tests/*" = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
] }
extend-exclude = ["__pycache__", "*.egg_info"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
